[package]
name = "pid_issuer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
mock = []
default = [
    "mock",
] # TODO remove this line once we can issue actual (i.e. non-hardcoded) attributes
digid_test = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = [
    "http1",
    "json",
    "tokio",
    "tower-log",
    "tracing",
    "headers",
] }
base64.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
ciborium = { workspace = true }
config = { workspace = true, features = ["toml"] }
futures.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
josekit.workspace = true
openid = { workspace = true, features = ["rustls"] }
openssl = { workspace = true, features = ["vendored"] }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

nl_wallet_mdoc = { path = "../mdoc" }

[dev-dependencies]
platform_support = { path = "../platform_support", features = ["software"] }
wallet_common = { path = "../wallet_common" }
wallet = { path = "../wallet", features = ["mock", "wallet_deps"] }
pid_issuer = { path = ".", features = ["mock"] }
