[package]
name = "pid_issuer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]
mock = ["dep:rand"]
default = [
    "mock",
] # TODO remove this line once we can issue actual (i.e. non-hardcoded) attributes
digid_test = []
disable_tls_validation = []

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = [
    "http1",
    "json",
    "tokio",
    "tower-log",
    "tracing",
    "headers",
] }
base64.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
ciborium.workspace = true
config = { workspace = true, features = ["toml"] }
futures.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
josekit.workspace = true
openid = { workspace = true, features = ["rustls"] }
openssl = { workspace = true, features = ["vendored"] }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["parking_lot"] }
trait-variant.workspace = true
url.workspace = true

rand = { workspace = true, optional = true }

nl_wallet_mdoc.path = "../mdoc"

[dev-dependencies]
pid_issuer = { path = ".", features = ["mock"] }
platform_support = { path = "../platform_support", features = ["software"] }
wallet = { path = "../wallet", features = ["mock", "wallet_deps"] }
wallet_common.path = "../wallet_common"
