[package]
name = "pid_issuer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "pid_issuer"
# TODO remove this line once we can issue actual (i.e. non-hardcoded) attributes
required-features = ["mock_attributes"]

[lib]
doctest = false

[features]
default = ["mock_attributes"]
# Allow the disclosure return URL and its prefix to use http://
disable_tls_validation = []
# Include MockAttributesLookup, which implements AttributesLookup
mock_attributes = []
# Include both MockAttributesLookup and MockBsnLookup, which implements BsnLookup
mock = ["dep:rand", "mock_attributes"]

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = [
    "http1",
    "json",
    "tokio",
    "tower-log",
    "tracing",
    "headers",
] }
base64.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
ciborium.workspace = true
config = { workspace = true, features = ["toml"] }
futures.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
josekit.workspace = true
openid = { workspace = true, features = ["rustls"] }
openssl = { workspace = true, features = ["vendored"] }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["parking_lot"] }
trait-variant.workspace = true
url.workspace = true

rand = { workspace = true, optional = true }

nl_wallet_mdoc.path = "../mdoc"
