[package]
name = "platform_support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
doctest = false

[features]
# Implement the PlatformEcdsaKey trait on SoftwareEcdsaKey
software = ["wallet_common/software_keys", "dep:tokio"]
# Enable helper code for integration tests
integration_test = ["wallet_common/integration_test", "tokio/fs", "tokio/io-util"]
# Enable helper code for iOS and Android integration tests
hardware_integration_test = ["integration_test", "dep:apple_app_attest", "dep:chrono", "dep:jni", "tokio/rt"]

[dependencies]
async-trait.workspace = true
derive_more = { workspace = true, features = ["debug"] }
p256 = { workspace = true, features = ["ecdsa", "pkcs8", "std"] }
parking_lot.workspace = true
thiserror.workspace = true
uniffi.workspace = true

chrono = { workspace = true, optional = true, features = ["now"] }
tokio = { workspace = true, optional = true, features = ["parking_lot"] }

error_category.path = "../error_category"
wallet_common = { path = "../wallet_common", features = ["axum"] }

apple_app_attest = { path = "../apple_app_attest", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "fs", "io-util"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
