[package]
name = "platform_support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
doctest = false

[features]
# Implement the platform key traits on mock hardware key types from `wallet_common`
mock_hw_keystore = ["wallet_common/mock_hardware_keys"]
# Include the MockHardwareAttestedKeyHolder type for use in tests
mock_attested_key = ["dep:apple_app_attest", "dep:uuid", "wallet_common/mock_apple_attested_key"]
# Include support for the self-signed mock Apple CA in MockHardwareAttestedKeyHolder.
mock_apple_ca = ["apple_app_attest/mock_ca"]
# Include PersistentMockAttestedKeyHolder for use in the iOS simulator
persistent_mock_attested_key = [
    "mock_attested_key",
    "mock_apple_ca",
    "dep:futures",
    "dep:serde",
    "dep:serde_json",
    "tokio/fs",
    "tokio/sync",
]
# Implement extra constructor on PersistentMockAttestedKeyHolder by reading Xcode environment variables.
xcode_env = ["apple_app_attest/xcode_env"]
# Include the MockHardwareUtilities type for use in tests
mock_utils = ["dep:tokio"]
# Include all mock implementations for use in tests
mock = ["mock_hw_keystore", "mock_attested_key", "mock_utils"]
# Enable helper code for iOS and Android integration tests
hardware_integration_test = [
    "dep:android_logger",
    "dep:apple_app_attest",
    "dep:cfg-if",
    "dep:jni",
    "dep:log",
    "dep:rustls-pki-types",
    "tokio/fs",
    "tokio/io-util",
    "tokio/rt",
    "apple_app_attest/xcode_env",
    "wallet_common/integration_test",
]

[dependencies]
async-trait.workspace = true
derive_more = { workspace = true, features = ["debug"] }
p256 = { workspace = true, features = ["ecdsa", "pkcs8", "std"] }
parking_lot.workspace = true
thiserror.workspace = true
uniffi.workspace = true

cfg-if = { workspace = true, optional = true }
futures = { workspace = true, optional = true, features = ["std"] }
log = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive", "rc"] }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["parking_lot"] }
uuid = { workspace = true, optional = true, features = ["v4"] }

error_category.path = "../error_category"
wallet_common = { path = "../wallet_common", features = ["axum"] }

apple_app_attest = { path = "../apple_app_attest", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { workspace = true, optional = true }
jni = { workspace = true, optional = true }

[dev-dependencies]
rustls-pki-types.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["macros", "fs", "io-util"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
