[package]
name = "revocation_portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
askama.workspace = true
askama_web = { workspace = true, features = ["axum-0.8"] }
axum = { workspace = true, features = ["form"] }
config = { workspace = true, features = ["toml"] }
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower.workspace = true
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

http_utils.path = "../lib/http_utils"
server_utils.path = "../wallet_server/server_utils"
utils.path = "../lib/utils"
web_utils.path = "../lib/web_utils"
