[package]
name = "revocation_portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[[test]]
name = "js_test"
path = "tests/js_test.rs"
required-features = ["integration_test"]

[features]
integration_test = []

[dependencies]
anyhow.workspace = true
askama.workspace = true
askama_web = { workspace = true, features = ["axum-0.8"] }
axum = { workspace = true, features = ["form"] }
axum_csrf = { workspace = true, features = ["layer"] }
base64.workspace = true
chrono.workspace = true
config = { workspace = true, features = ["toml"] }
derive_more = { workspace = true, features = ["from"] }
itertools.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
strfmt.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower.workspace = true
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
trait-variant.workspace = true

crypto.path = "../lib/crypto"
http_utils = { path = "../lib/http_utils", features = ["client"] }
readable_identifier.path = "../wallet_provider/readable_identifier"
server_utils.path = "../wallet_server/server_utils"
utils.path = "../lib/utils"
web_utils.path = "../lib/web_utils"

[dev-dependencies]
rstest.workspace = true
scraper.workspace = true
serde_urlencoded.workspace = true

[build-dependencies]
web_utils = { path = "../lib/web_utils", features = ["build"] }
