[package]
name = "sd_jwt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["as_ref", "display", "from", "from_str", "into"] }
http.workspace = true
http-serde.workspace = true
josekit = { workspace = true, features = ["vendored"] }
jsonwebtoken.workspace = true
jsonschema.workspace = true
nutype.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with = { workspace = true }
thiserror.workspace = true

wallet_common.path = "../wallet_common"

[dev-dependencies]
assert_matches.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros"] }
