[package]
name = "sd_jwt_vc_metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
example_constructors = []

[dependencies]
derive_more = { workspace = true, features = ["as_ref", "from", "into_iterator"] }
http.workspace = true
http-serde.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
jsonschema.workspace = true
nutype.workspace = true
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with = { workspace = true, features = ["base64"] }
ssri.workspace = true
thiserror.workspace = true

crypto.path = "../crypto"
wallet_common.path = "../wallet_common"

# SD-JWT deps
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
json-pointer.workspace = true
rand.workspace = true
serde_with = { workspace = true, features = ["chrono"] }
strum.workspace = true

[dev-dependencies]
assert_matches.workspace = true
async-trait.workspace = true
josekit = { version = "0.8.4", features = ["vendored"] }
p256 = { workspace = true, features = ["default", "pem"] }
rand_core.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros"] }
